refactor(profile): change companion catalogue routes prefix to /companions
